master
------

	* Added CURLOPT_POSTREDIR option and CURL_REDIR_POST_301,
	  CURL_REDIR_POST_302, CURL_REDIR_POST_303 and CURL_REDIR_POST_ALL
	  constants. CURL_REDIR_POST_303 requires libcurl 7.26.0 or higher,
	  all others require libcurl 7.19.1 or higher.

	* PycURL now supports Python 3.1 through 3.3. Python 3.0 might
	  work but it appears to ship with broken distutils, making virtualenv
	  not function on it.

	* PycURL multi objects now have the multi constants defined on them.
	  Previously the constants were only available on pycurl module.
	  The new behavior matches that of curl and share objects.

	* PycURL share objects can now be closed via the close() method.

	* PycURL will no longer call `curl-config --static-libs` if
	  `curl-config --libs` succeeds and returns output.
	  Systems on which neither `curl-config --libs` nor
	  `curl-config --static-libs` do the right thing should provide
	  a `curl-config` wrapper that is sane.
	  

	* Added CURLFORM_BUFFER and CURLFORM_BUFFERPTR.

	* pycurl.version and user agent string now include both
	  PycURL version and libcurl version as separate items.

	* Added CURLOPT_DNS_SERVERS.

	* PycURL can now be dynamically linked against libcurl on Windows
	  if PYCURL_USE_LIBCURL_DLL is #defined during compilation.

	* Breaking change: opensocket callback now takes an additional
	  (address, port) tuple argument. Existing callbacks will need to
	  be modified to accept this new argument.
	  https://github.com/pycurl/pycurl/pull/18

Version 7.19.0.2 [requires libcurl-7.19.0 or better] - 2013-10-08
-----------------------------------------------------------------

	* Fixed a bug in a commit made in 2008 but not released until 7.19.0.1
	  which caused CURLOPT_POSTFIELDS to not correctly increment reference
	  count of the object being given as its argument, despite libcurl not
	  copying the data provided by said object.

	* Added support for libcurl pause/unpause functionality,